--- a/nillTheme/style/style.scss
+++ b/nillTheme/style/style.scss
@@ -28,5 +28,5 @@ $mb: 20px;
 
 @import 'components/flexbox';
 @import 'components/reset';
+@import 'components/global';
 @import 'components/code';
-@import 'components/rwd';
