--- a/nillTheme/style/components/reset.scss
+++ b/nillTheme/style/components/reset.scss
@@ -106,6 +106,10 @@ article, aside, details, figcaption, figure, footer, header, nav, section, summa
   display: block;
 }
 
+figure {
+  margin: 0;
+}
+
 strong,
 b {
   font-weight: 700;
