Fix Clamp Function

--- a/style/components/mixins.scss
+++ b/style/components/mixins.scss
@@ -125,7 +125,7 @@
 @function setClamp($max, $min) {
   $mod: ($max - $min) / (1920px - 1024px);
   $first: $max - 1920px * $mod;
-  $last: 100vw * 0.004;
+  $last: 100vw * $mod;
   $sum: calc(#{$first} + #{$last});
 
   @return clamp($min, $sum, $max);
